[metadata]
name = pytools
version = 0.1.6
author = berquerant
description = Utilities for myself
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berquerant/pytools
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir =
    pytools = pytools
packages =
    pytools
include_package_data = True
python_requires = >= 3.8
entry_points = file: entry_points.cfg