[metadata]
name = pytools
version = 0.2.8
author = berquerant
description = Utilities for myself
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/berquerant/pytools
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
package_dir =
    pytools = pytools
packages =
    pytools
include_package_data = True
python_requires = >= 3.10
entry_points = file: entry_points.cfg
install_requires =
    croniter >= 1.3.4
    graphviz >= 0.20
    lxml >= 4.8.0
    python-dateutil >=2.8.2
    six >= 1.16.0
    pyparsing >= 3.0.9
    pkommand @ git+https://github.com/berquerant/pkommand.git@0.3.3#egg=pkommand